2011-10-26 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	include/functions_forecast.php
	include/functions_reporting.php
	include/functions.php
	godmode/reporting/reporting_builder.php
	godmode/reporting/reporting_builder.item_editor.php: Added two new
	types of reports 'projection graph' and 'prediction date'. 

2011-10-25  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/module_manager_editor.php: Fixed keep_alive
	modules creation bug hidding the configuration data textarea 

2011-10-25  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php: Deleted problematic name change
	into textarea function

2011-10-24  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_api.php: Fixed 'id_alert_template' variable.

2011-10-21  Junichi Satoh  <junichi@rworks.jp>

	* godmode/alerts/configure_alert_compound.php: Fixed column order
	inconsistencies.

2011-10-19  Junichi Satoh  <junichi@rworks.jp>

	* mobile/operation/agents/monitor_status.php,
	mobile/operation/agents/tactical.php,
	mobile/operation/agents/view_alerts.php,
	mobile/operation/servers/view_servers.php: Fixed 'img' paths.

2011-10-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/module_manager_editor_common.php: Fixed column 
	width in this view.
	
	Fixes: #3423546

2011-10-14  Koichiro Kikuchi  <koichiro@rworks.jp>

	* include/help/en/help_alert_macros.php,
	  include/help/ja/help_alert_macros.php: Added the new
	  _plugin_parameters_ alert macro.

2011-10-13  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events_list.php: Fixed events view sql 
	error to no admin users for bug 3422861

2011-10-11 Dario Rodriguez <dario.rodriguez@artica.es>

	* images/vmware.png: Added forgotten file.

2011-10-10 Tomas Palacios <tomas.palacios@artica.es>

	* extras/pandoradb_migrate_v3.2_to_v4.0.sql: Updated to provide
	additional compatibility with older versions of MySQL.

2011-10-10  Sergio Martin <sergio.martin@artica.es>
